crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@143.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table boolrangep_ff1 partition of boolrangep for values from ('false', 'false', 0) to ('false', 'false', 50);"
---
CreateStmt@0..116
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "boolrangep_ff1"
  Whitespace@27..28 " "
  Partition@28..37 "partition"
  Whitespace@37..38 " "
  Of@38..40 "of"
  Whitespace@40..41 " "
  RangeVar@41..51
    Ident@41..51 "boolrangep"
  Whitespace@51..52 " "
  For@52..55 "for"
  Whitespace@55..56 " "
  Values@56..62 "values"
  Whitespace@62..63 " "
  PartitionBoundSpec@63..114
    From@63..67 "from"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..76
      Sconst@69..76 "'false'"
    Ascii44@76..77 ","
    Whitespace@77..78 " "
    AConst@78..85
      Sconst@78..85 "'false'"
    Ascii44@85..86 ","
    Whitespace@86..87 " "
    AConst@87..88
      Iconst@87..88 "0"
    Ascii41@88..89 ")"
    Whitespace@89..90 " "
    To@90..92 "to"
    Whitespace@92..93 " "
    Ascii40@93..94 "("
    AConst@94..101
      Sconst@94..101 "'false'"
    Ascii44@101..102 ","
    Whitespace@102..103 " "
    AConst@103..110
      Sconst@103..110 "'false'"
    Ascii44@110..111 ","
    Whitespace@111..112 " "
    AConst@112..114
      Iconst@112..114 "50"
  Ascii41@114..115 ")"
  Ascii59@115..116 ";"

