crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@144.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table boolrangep_ff2 partition of boolrangep for values from ('false', 'false', 50) to ('false', 'false', 100);"
---
CreateStmt@0..118
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "boolrangep_ff2"
  Whitespace@27..28 " "
  Partition@28..37 "partition"
  Whitespace@37..38 " "
  Of@38..40 "of"
  Whitespace@40..41 " "
  RangeVar@41..51
    Ident@41..51 "boolrangep"
  Whitespace@51..52 " "
  For@52..55 "for"
  Whitespace@55..56 " "
  Values@56..62 "values"
  Whitespace@62..63 " "
  PartitionBoundSpec@63..116
    From@63..67 "from"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..76
      Sconst@69..76 "'false'"
    Ascii44@76..77 ","
    Whitespace@77..78 " "
    AConst@78..85
      Sconst@78..85 "'false'"
    Ascii44@85..86 ","
    Whitespace@86..87 " "
    AConst@87..89
      Iconst@87..89 "50"
    Ascii41@89..90 ")"
    Whitespace@90..91 " "
    To@91..93 "to"
    Whitespace@93..94 " "
    Ascii40@94..95 "("
    AConst@95..102
      Sconst@95..102 "'false'"
    Ascii44@102..103 ","
    Whitespace@103..104 " "
    AConst@104..111
      Sconst@104..111 "'false'"
    Ascii44@111..112 ","
    Whitespace@112..113 " "
    AConst@113..116
      Iconst@113..116 "100"
  Ascii41@116..117 ")"
  Ascii59@117..118 ";"

