crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@166.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE part_p2_p1 PARTITION OF part_p2 DEFAULT;
---
CreateStmt@0..53
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "part_p2_p1"
  Whitespace@23..24 " "
  Partition@24..33 "PARTITION"
  Whitespace@33..34 " "
  Of@34..36 "OF"
  Whitespace@36..37 " "
  RangeVar@37..44
    Ident@37..44 "part_p2"
  Whitespace@44..45 " "
  PartitionBoundSpec@45..52
    Default@45..52 "DEFAULT"
  Ascii59@52..53 ";"

