crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@178.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rp0 partition of rp for values from (minvalue) to (1);
---
CreateStmt@0..67
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..16
    Ident@13..16 "rp0"
  Whitespace@16..17 " "
  Partition@17..26 "partition"
  Whitespace@26..27 " "
  Of@27..29 "of"
  Whitespace@29..30 " "
  RangeVar@30..32
    Ident@30..32 "rp"
  Whitespace@32..33 " "
  For@33..36 "for"
  Whitespace@36..37 " "
  Values@37..43 "values"
  Whitespace@43..44 " "
  PartitionBoundSpec@44..65
    From@44..48 "from"
    Whitespace@48..49 " "
    Ascii40@49..50 "("
    ColumnRef@50..58
      Minvalue@50..58 "minvalue"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    To@60..62 "to"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..65
      Iconst@64..65 "1"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

